[package]
name = "onetimesecret"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
serde = "1.0.171"
serde_json = "1.0.100"
worker = "0.0.17"

[profile.release]
lto = true
strip = true
opt-level = "s"
codegen-units = 1
